Visual da página de login ok

--- a/cherry/WebContent/auth/login/index.html
+++ b/cherry/WebContent/auth/login/index.html
@@ -35,14 +35,16 @@
                     >
 
                     <label class="checkbox-container">
-                    	<span>Mantenha-me conectadxcxco</span>
+                    	<span>Mantenha-me conectado</span>
                         <input class="checkbox-input" type="checkbox">
                         <span class="checkbox-mark"></span>
                     </label>
 
                     <button class="login-button" type="submit">Entrar</button>
 
-                    <a class="login-forgot" href=""><span>Esqueceu sua senha?</span></a>
+					<div class="justify-left">
+                    	<a class="login-forgot" href="">Esqueceu sua senha?</a>
+					</div>
                 </div>
             </form>
         </div>
