--- a/cherry/WebContent/index.html
+++ b/cherry/WebContent/index.html
@@ -11,7 +11,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 		
-		<link rel="icon" href="./imgs/icon.png" sizes="16x16">
+		<link rel="icon" href="./images/icon.png" sizes="16x16">
 		<link rel="stylesheet" href="./css/main.css">
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
