--- a/cherry/WebContent/index.html
+++ b/cherry/WebContent/index.html
@@ -37,6 +37,7 @@
 		</v-app>
 		
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 		<script type="module" src="./js/main.js"></script>    
