--- a/cherry/WebContent/index.html
+++ b/cherry/WebContent/index.html
@@ -44,6 +44,7 @@
 		<script src="https://unpkg.com/vue-toasted"></script>
 		<script src="https://cdn.jsdelivr.net/npm/v-mask/dist/v-mask.min.js"></script>
 		<script src="./js/auth.js"></script>
+		<script type="module" src="./js/telas.js"></script>
 		<script type="module" src="./js/main.js"></script>    
 	</body>
 </html>
