--- a/cherry/WebContent/index.html
+++ b/cherry/WebContent/index.html
@@ -43,6 +43,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js" integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg==" crossorigin="anonymous"></script>
 		<script src="https://unpkg.com/vue-toasted"></script>
 		<script src="https://cdn.jsdelivr.net/npm/v-mask/dist/v-mask.min.js"></script>
+		<script src="path/to/vue-spinner.js"></script>
 		<script src="./js/auth.js"></script>
 		<script type="module" src="./js/telas.js"></script>
 		<script type="module" src="./js/main.js"></script>    
