--- a/cherry/WebContent/index.html
+++ b/cherry/WebContent/index.html
@@ -43,7 +43,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js" integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg==" crossorigin="anonymous"></script>
 		<script src="https://unpkg.com/vue-toasted"></script>
 		<script src="https://cdn.jsdelivr.net/npm/v-mask/dist/v-mask.min.js"></script>
-		<script src="path/to/vue-spinner.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js" integrity="sha512-YnVU8b8PyEw7oHtil6p9au8k/Co0chizlPltAwx25CMWX6syRiy24HduUeWi/WpBbJh4Y4562du0CHAlvnUeeQ==" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js" integrity="sha512-AtJGnumoR/L4JbSw/HzZxkPbfr+XiXYxoEPBsP6Q+kNo9zh4gyrvg25eK2eSsp1VAEAP1XsMf2M984pK/geNXw==" crossorigin="anonymous"></script>
 		<script src="./js/auth.js"></script>
 		<script type="module" src="./js/telas.js"></script>
 		<script type="module" src="./js/main.js"></script>    
